# BooHoo

./: .gitignore  AGENTS.md  README.md  app.py  crossval.py  organize_data.py  predict.py  prepare_dataset.py  progress.md  pyproject.toml  requirements.txt  train.py
Data/v3_organized/: dedup_report.csv  dedup_summary.txt
