[project]
name = "deepinfant"
version = "0.1.0"
description = "DeepInfant infant cry classification with local Windows GUI"
requires-python = ">=3.10"
dependencies = [
  "gradio>=4.0.0",
  "librosa>=0.10.0",
  "numpy>=1.21.0",
  "pandas>=1.5.0",
  "scikit-learn>=1.0.0",
  "soundfile>=0.12.1",
  "torch>=2.0.0",
  "torchaudio>=2.0.0",
  "torchvision>=0.25.0",
  "tqdm>=4.65.0",
]

[tool.uv]
package = false
